// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatePicker /> component onBlur event should render error message when date is below min 1`] = `
.emotion-0 {
  display: block;
  height: auto;
  width: 100%;
  position: relative;
}

.emotion-2 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #636464;
  cursor: inherit;
  font-size: .75rem;
  left: 15px;
  top: 15px;
  position: absolute;
  -webkit-transform: translateY(-45%);
  -moz-transform: translateY(-45%);
  -ms-transform: translateY(-45%);
  transform: translateY(-45%);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-4 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  background-color: #FFFFFF;
  border: 1px solid #D3D4D5;
  border-bottom: 2px solid #FF4A4A;
  color: #636464;
  min-width: 198px;
  padding: 20px 15px 5px 15px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  height: 53px;
}

.emotion-6 {
  padding-left: 15px;
}

.emotion-8 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF4A4A;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <label
      class="emotion-2 emotion-3"
      data-testid="label-field"
      for="Choose-a-date"
    >
      Choose a date
       
    </label>
    <input
      class="emotion-4 emotion-5"
      id="Choose-a-date"
      min="2023-03-30"
      name="Choose-a-date"
      type="date"
      value="2023-02-01"
    />
    <div
      class="emotion-6 emotion-7"
    >
      <span
        class="emotion-8 emotion-9"
        color="error.default"
        data-testid="typography"
      >
        Please enter a valid date
      </span>
    </div>
  </div>
</div>
`;

exports[`<DatePicker /> component onBlur event should render error message when date is higher than max 1`] = `
.emotion-0 {
  display: block;
  height: auto;
  width: 100%;
  position: relative;
}

.emotion-2 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #636464;
  cursor: inherit;
  font-size: .75rem;
  left: 15px;
  top: 15px;
  position: absolute;
  -webkit-transform: translateY(-45%);
  -moz-transform: translateY(-45%);
  -ms-transform: translateY(-45%);
  transform: translateY(-45%);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-4 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  background-color: #FFFFFF;
  border: 1px solid #D3D4D5;
  border-bottom: 2px solid #FF4A4A;
  color: #636464;
  min-width: 198px;
  padding: 20px 15px 5px 15px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  height: 53px;
}

.emotion-6 {
  padding-left: 15px;
}

.emotion-8 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF4A4A;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <label
      class="emotion-2 emotion-3"
      data-testid="label-field"
      for="Choose-a-date"
    >
      Choose a date
       
    </label>
    <input
      class="emotion-4 emotion-5"
      id="Choose-a-date"
      max="2025-03-30"
      name="Choose-a-date"
      type="date"
      value="2026-02-01"
    />
    <div
      class="emotion-6 emotion-7"
    >
      <span
        class="emotion-8 emotion-9"
        color="error.default"
        data-testid="typography"
      >
        Please enter a valid date
      </span>
    </div>
  </div>
</div>
`;

exports[`<DatePicker /> component should render date input correctly 1`] = `
.emotion-0 {
  display: block;
  height: auto;
  width: 100%;
  position: relative;
}

.emotion-2 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #636464;
  cursor: inherit;
  font-size: .75rem;
  left: 15px;
  top: 15px;
  position: absolute;
  -webkit-transform: translateY(-45%);
  -moz-transform: translateY(-45%);
  -ms-transform: translateY(-45%);
  transform: translateY(-45%);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-4 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  background-color: #FFFFFF;
  border: 1px solid #D3D4D5;
  border-bottom: 1px solid #D3D4D5;
  color: #636464;
  min-width: 198px;
  padding: 20px 15px 5px 15px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  height: 53px;
}

.emotion-4:focus {
  border-bottom: 2px solid #00677F;
  outline: none;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <label
      class="emotion-2 emotion-3"
      data-testid="label-field"
      for="Choose-a-date"
    >
      Choose a date
       
      *
    </label>
    <input
      class="emotion-4 emotion-5"
      id="Choose-a-date"
      max="2025-03-30"
      min="2023-03-30"
      name="Choose-a-date"
      type="date"
      value=""
    />
  </div>
</div>
`;
